Externalize CORS origins and fix application.properties for deployment